[gd_scene load_steps=3 format=3 uid="uid://d24hy0xsanu6q"]

[ext_resource type="Texture2D" uid="uid://qdjli3urk4tm" path="res://icon.svg" id="1_aeu7d"]
[ext_resource type="Script" uid="uid://cuun5h2mypby2" path="res://level_selector.gd" id="1_gkmvm"]

[node name="LevelSelector" type="Node"]
script = ExtResource("1_gkmvm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.988
offset_bottom = 7.776
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="NinjaGardensButton" type="TextureButton" parent="HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_aeu7d")

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Ninja Gadens"
horizontal_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="CowboyDesertButton" type="TextureButton" parent="HBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_aeu7d")

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "Cowboy Dessert"
horizontal_alignment = 1

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer3"]
layout_mode = 2

[node name="BigHandsCityButton" type="TextureButton" parent="HBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_aeu7d")

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2
text = "Big Hands City"
horizontal_alignment = 1

[connection signal="button_up" from="HBoxContainer/CenterContainer/VBoxContainer/NinjaGardensButton" to="." method="_on_ninja_gardens_button_button_up"]
[connection signal="button_up" from="HBoxContainer/CenterContainer2/VBoxContainer/CowboyDesertButton" to="." method="_on_cowboy_desert_button_button_up"]
[connection signal="button_up" from="HBoxContainer/CenterContainer3/VBoxContainer/BigHandsCityButton" to="." method="_on_big_hands_city_button_button_up"]
